# aoa-xda-connector

./: .env.example  .gitignore  AGENTS.md  BOUNDARIES.md  CHANGELOG.md  CHARTER.md  README.md  ROADMAP.md  pyproject.toml
.connector-state/: AGENTS.md  README.md
.github/workflows/: validate.yml
connector/: README.md  SOURCE_POLICY.md  STORAGE_POLICY.md
connector/manifests/: artifact_classes.yaml  connector_manifest.yaml  route_allowlist.yaml
connector/profiles/: pixel-8-pro-husky.yaml
connector/schemas/: answer_packet.schema.json  applicability_report.schema.json  claim.schema.json  claim_relation.schema.json  conflict_report.schema.json  crawl_receipt.schema.json  evidence_packet.schema.json  freshness_report.schema.json  graph_edge.schema.json  graph_node.schema.json  index_manifest.schema.json  materialize_receipt.schema.json  normalized_post.schema.json  normalized_topic.schema.json  warning_report.schema.json
connector/seeds/: pixel_8_pro_husky_threads.yaml
docs/: AGENT_INSTALL_ROUTE.md  ARCHITECTURE.md  CONNECTOR_FAMILY_CLAIM_CONTRACT.md  GRAPH_MODEL.md  INSTALL.md  MCP_ROLLOUT.md  QUERY_MODEL.md  RUNTIME_CONTRACT.md  STARTER_PROOF.md
docs/decisions/: AOA-XDA-D-0001-second-source-connector-proof.md  README.md
evals/: AGENTS.md  PORT.yaml  README.md
evals/intake/: README.md
evals/reports/: README.md
evals/suites/: README.md  connector-family-claim-runtime.suite.md  (+2 more)
kag/: AGENTS.md  README.md  manifest.json
scripts/: validate_connector.py  validate_local_stats_port.py
stats/: AGENTS.md  README.md  port.manifest.json
(+80 files in other folders)
